--- a/scss/partials/_768up.scss
+++ b/scss/partials/_768up.scss
@@ -39,3 +39,143 @@ html{
 #logo:hover, .nav-links:hover {
   color: $highlight-color;
 }
+
+//Main section
+
+#app{
+ /**
+   * Lay out the children of this container with
+   * flexbox.
+   */
+  display: flex;
+
+  /**
+   * Rotate the main axis so that the children
+   * are laid out vertically, the same as in the
+   * above "Side bar" example.
+   */
+  flex-direction: column;
+
+  /**
+   * Instead of pushing the children apart, as in
+   * previous examples, we will group them together
+   * in the center of their container.
+   */
+  justify-content: center;
+
+  /**
+   * Align the children in the center, along
+   * the main axis. Because the direction is
+   * "column" this has a similar effect as setting
+   * text-align: center.
+   */
+  align-items: center;
+
+  overflow:hidden;
+  height: auto;
+  padding: 20px;
+  background: #fff;
+  width: 90%;
+  margin: 80px auto;
+  border-radius: 25px;
+  transition: max-height 2s ease-out;
+}
+
+
+.input{
+  width: 100%;
+  ul{
+    justify-content: center;
+  }
+}
+
+
+
+.select{
+  margin: 10px auto;
+  width: 80%;
+  padding-top: 20px;
+  text-align: center;
+
+    .option{
+      font-size: 50px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+  select{
+    text-align-last: center;
+    width: 80%;
+    border: 2px solid black;
+    padding: 15px;
+    font-size: 20px;
+    outline: none;
+
+  }
+  
+
+  .list{
+    width: 100%;
+    border-color: #999;
+    background: inherit;
+    border-radius: 0px;
+    overflow: scroll;
+  }
+
+  .current{
+    text-align: center;
+  }
+
+  h2{
+    font-size: 40px;
+    padding-bottom: 20px;
+
+  }
+
+}
+
+
+.btn{
+  margin: 0 auto;
+  padding-top: 10px;
+  text-align: center;
+
+  button{
+    background: #fff;
+    box-shadow: none;
+    font-size: 20px;
+    padding: 10px 10px;
+    border-radius: 1px;
+    box-shadow: inset 0 -1px 0 1px rgba(0,0,0,.1), inset 0 -10px 20px rgba(0,0,0,.1);
+    cursor: pointer;
+    outline: none;
+    transition: background 1s, color .5s;
+    &:hover{
+      background: #83D455;
+      color: #fff;
+    }
+  }
+}
+
+//Result container
+
+#result{
+  display: none;
+  width: 100%;
+  border-radius: 25px;
+  color: $base-font-color;
+  font-weight: 200;
+  font-size: 40px;
+  margin-bottom: 30px;
+  text-align: center;
+  padding: 10px;
+}
+
+#back-btn{
+  margin-top: 30px;
+}
+
+.show{
+  display: block !important;
+}
+
