--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -162,7 +162,7 @@ body {
 
 .btn{
   margin: 0 auto;
-  padding-top: 10px;
+  padding: 10px 0 30px 0;
   text-align: center;
 
   button{
@@ -185,6 +185,7 @@ body {
 //Result container
 
 #result{
+  margin-top: 20px;
   display: none;
   width: 100%;
   border-radius: 25px;
